# marude

./: CMakeLists.txt
client/: cmd_runner.go  config.go  go.mod  linux_service.go  main.go  register.go  windows_service.go
ctrl/: config.go  go.mod  main.go  req.go
extend/: go.mod
pocket/: go.mod
pocket/common/: common.go
server/: config.go  go.mod  main.go  req.go
server/view/: display.html  index.html
system/conf/: config.ini.sample  extend.conf.sample  marude.conf.sample
system/linux/: marude_client.service  marude_extend.service  marude_server.service  proc_service.sh
system/win/: proc_service.bat
